# SoundMapping

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/audio/: AudioSessionManager.cpp  AudioSessionManager.h  DefaultDevice.cpp  DefaultDevice.h  EndpointEnumerator.cpp  EndpointEnumerator.h  ProcessCapture.cpp  ProcessCapture.h
src/dsp/: Biquad.h  ChannelEq.cpp  ChannelEq.h
src/gui/: ControlPanel.cpp  ControlPanel.h  MixerWindow.cpp  MixerWindow.h
src/hardware/: SerialController.cpp  SerialController.h  SerialReader.cpp  SerialReader.h
src/routing/: AppAudioRouter.cpp  AppAudioRouter.h  AudioRouter.cpp  AudioRouter.h  MixEngine.cpp  MixEngine.h
src/tools/: app_eq.cpp  router_test.cpp  virtual_route.cpp
